--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Imágen GIF desde GitHub -->
     <img src="https://raw.githubusercontent.com/usuario/repo/main/imagenes/mi_gif.gif" alt="GIF desde GitHub">
+    *<<<<img src="https://raw.githubusercontent.com/usuario/repo/main/imagenes/mi_gif.gif" alt="GIF desde GitHub">>>>*
 
 </body>
 </html>
