--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>GIF desde un repositorio de GitHub</h1>
 
     <!-- Imágen GIF desde GitHub -->
-    <img src="https://raw.githubusercontent.com/usuario/repo/main/imagenes/mi_gif.gif" alt="GIF desde GitHub">
+    <img src="https://github.com/dollieourgifs/bangchan/BangChanGif/bangchan.git" alt="GIF desde GitHub">
     *<<<<img src="https://raw.githubusercontent.com/usuario/repo/main/imagenes/mi_gif.gif" alt="GIF desde GitHub">>>>*
 
 </body>
