--- a/index.html
+++ b/index.html
@@ -3,14 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mostrar GIF desde GitHub</title>
+    <title>Galería de GIFs</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+        }
+        h1 {
+            margin-top: 50px;
+            font-size: 2.5em;
+        }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        .gallery img {
+            margin: 15px;
+            width: 300px;
+            height: auto;
+            border: 3px solid #ddd;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
+        .gallery img:hover {
+            transform: scale(1.05);
+        }
+    </style>
 </head>
 <body>
-    <h1>GIF desde un repositorio de GitHub</h1>
 
-    <!-- Imágen GIF desde GitHub -->
-    <img src="https://github.com/dollieourgifs/bangchan/BangChanGif/bangchan.git" alt="GIF desde GitHub">
-    *<<<<img src="https://raw.githubusercontent.com/usuario/repo/main/imagenes/mi_gif.gif" alt="GIF desde GitHub">>>>*
+    <h1>Galería de GIFs de mi repositorio</h1>
+
+    <div class="gallery">
+        <!-- GIF 1 -->
+        <img src="https://raw.githubusercontent.com/tu_usuario/tu_repositorio/main/gif/gif1.gif" alt="GIF 1">
+
+        <!-- GIF 2 -->
+        <img src="https://raw.githubusercontent.com/tu_usuario/tu_repositorio/main/gif/gif2.gif" alt="GIF 2">
+
+        <!-- GIF 3 -->
+        <img src="https://raw.githubusercontent.com/tu_usuario/tu_repositorio/main/gif/gif3.gif" alt="GIF 3">
+    </div>
 
 </body>
 </html>
