--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="gallery">
         <!-- GIF 1 -->
-        <img src="https://raw.githubusercontent.com/tu_usuario/tu_repositorio/main/gif/gif1.gif" alt="GIF 1">
+        <img src="https://github.com/dollieourgifs/BangChanGig/BangChan.git" alt="GIF 1">
 
         <!-- GIF 2 -->
         <img src="https://raw.githubusercontent.com/tu_usuario/tu_repositorio/main/gif/gif2.gif" alt="GIF 2">
