--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <script>
     // URL del repositorio en GitHub
-    const repoURL = "https://api.github.com/repos/dollieourgifs/bangchan/";
+    const repoURL = "https://github.com/dollieourgifs/bangchan.git";
 
     // Contenedor donde se mostrarán los GIFs
     const container = document.getElementById('gif-container');
