--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       font-family: Arial, sans-serif;
       text-align: center;
     }
-   
+    img {
+      max-width: 300px;
+      margin: 10px;
+    }
   </style>
 </head>
 <body>
