--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <script>
     // URL del repositorio en GitHub
-    const repoURL = "https://github.com/dollieourgifs/bangchan.git";
+    const repoURL = "https://github.com/dollieourgifs/bangchan/main/BangChanGif";
 
     // Contenedor donde se mostrarán los GIFs
     const container = document.getElementById('gif-container');
