--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mis GIF BangChan</title>
+  <title>Mis GIF</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h1>Mis GIFs</h1>
+  <h1>Mis GIF BangChan</h1>
   <div id="gif-container"></div>
 
   <script>
