--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h1>Mis GIF BangChan</h1>
+  <h1>Mis GIF BangChan 2</h1>
   <div id="gif-container"></div>
 
   <script>
