--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             width: 1400px; /* Ancho del contenido */
             margin: 0 auto;
             padding: 0px 0px; /* Añadir relleno a los lados para evitar que los GIFs estén pegados al borde */
-            text-align: center;
+            text-align: justify;
             margin-top: 30px;
             box-sizing: border-box; /* Asegurarse de que el relleno se incluye en el cálculo del ancho */
         }
