--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         #gifcontainer {
             width: 1400px; /* Ancho del contenido */
             margin: 0 auto;
-            padding: 0px 0px; /* Añadir relleno a los lados para evitar que los GIFs estén pegados al borde */
+            padding: 0 0; /* Añadir relleno a los lados para evitar que los GIFs estén pegados al borde */
             text-align: justify;
             margin-top: 30px;
             box-sizing: border-box; /* Asegurarse de que el relleno se incluye en el cálculo del ancho */
@@ -53,6 +53,7 @@
             width: 268px;
             height: auto;
             margin: 0px; /* Añadir margen entre los GIFs */
+            padding: 0px; /* Añadir margen entre los GIFs */
         }
     </style>
 </head>
