--- a/index.html
+++ b/index.html
@@ -85,4 +85,12 @@
                 gifs.forEach(file => {
                     const img = document.createElement('img');
                     img.src = file.download_url; // Usar la URL directa del archivo
-                    img.alt = f
+                    img.alt = file.name; // Texto alternativo
+                    img.classList.add('gif'); // Añadir la clase 'gif' para aplicar los estilos
+                    container.appendChild(img); // Agregar al contenedor
+                });
+            })
+            .catch(error => console.error('Error al cargar los GIFs:', error));
+    </script>
+</body>
+</html>
